--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-state-patterns",
   "version": "0.1.0",
   "description": "Tiny utility package for easily creating reusable implementations of React state patterns.",
-  "main": "lib/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "",
-    "build": "babel src --out-dir lib"
+    "build": "webpack --mode production"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -36,10 +36,17 @@
   },
   "homepage": "https://github.com/mcclayton/react-state-patterns#readme",
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "react": "^16.8.4",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
