--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "prepublish": "yarn build"
   },
   "lint-staged": {
     "*.{js,jsx}": [
