--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-state-patterns",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Tiny utility package for easily creating reusable implementations of React state provider patterns.",
   "main": "dist/main.js",
   "scripts": {
@@ -29,7 +29,8 @@
     "hooks",
     "decorator",
     "patterns",
-    "render props"
+    "render props",
+    "context"
   ],
   "peerDependencies": {
     "react": "^16.8.0"
