--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tiny utility package for easily creating reusable implementations of React state provider patterns.",
   "main": "dist/main.js",
   "scripts": {
-    "test": "",
+    "test": "jest",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "prepublishOnly": "yarn build"
@@ -16,6 +16,11 @@
     "*.{js,jsx}": [
       "prettier --write",
       "git add"
+    ]
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/src/test-setup.js"
     ]
   },
   "repository": {
@@ -46,12 +51,15 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "husky": "^1.3.1",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
