--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
+    "docs": "rimraf ./docs && ./node_modules/.bin/esdoc",
     "prepublishOnly": "yarn build"
   },
   "files": [
@@ -53,6 +54,9 @@
     "babel-loader": "^8.0.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "esdoc": "^1.1.0",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "husky": "^1.3.1",
@@ -61,6 +65,7 @@
     "prettier": "^1.18.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "rimraf": "^3.0.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   }
