--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.4.0",
   "description": "Tiny utility package for easily creating reusable implementations of React state provider patterns.",
   "main": "dist/main.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && yarn build:typedefs",
+    "build:typedefs": "tsc --declaration --emitDeclarationOnly --rootDir src --outDir dist/types",
     "dev": "webpack --mode development",
     "docs": "rimraf ./docs && ./node_modules/.bin/esdoc",
     "prepublishOnly": "yarn build"
@@ -48,25 +50,27 @@
   },
   "homepage": "https://github.com/mcclayton/react-state-patterns#readme",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "babel-loader": "^8.0.5",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "esdoc": "^1.1.0",
-    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
-    "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
     "husky": "^1.3.1",
-    "jest": "^24.9.0",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.18.2",
+    "prettier": "^1.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "rimraf": "^3.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
