Use hook-style naming.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-state-patterns",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "Tiny utility package for easily creating reusable implementations of React state provider patterns.",
   "main": "dist/main.js",
   "types": "dist/types/index.d.ts",
@@ -41,7 +41,8 @@
     "context"
   ],
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "author": "Michael Clayton",
   "license": "MIT",
@@ -50,27 +51,27 @@
   },
   "homepage": "https://github.com/mcclayton/react-state-patterns#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "babel-loader": "^8.0.5",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^5.15.1",
-    "eslint-config-prettier": "^4.1.0",
-    "husky": "^1.3.1",
-    "jest": "^24.5.0",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.4",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "@babel/core": "7.6.4",
+    "@babel/preset-env": "7.6.3",
+    "@babel/preset-react": "7.6.3",
+    "@babel/preset-typescript": "7.6.0",
+    "@types/react": "16.9.9",
+    "@types/react-dom": "16.9.2",
+    "babel-loader": "8.0.6",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.1",
+    "eslint": "6.5.1",
+    "eslint-config-prettier": "6.4.0",
+    "husky": "3.0.9",
+    "jest": "24.9.0",
+    "lint-staged": "9.4.2",
+    "prettier": "1.18.2",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "ts-jest": "24.1.0",
+    "ts-loader": "6.2.0",
+    "typescript": "3.6.4",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.9"
   }
 }
